admin font d2d user font dashboard

--- a/public/assets/admin/css/tailwind2.css
+++ b/public/assets/admin/css/tailwind2.css
@@ -32386,6 +32386,11 @@ td.gridjs-td:last-child {
     background-color: #3b82f6;
 }
 
+.bg_top_hed_user{
+    /* background-color: #295aab; */
+    background-color: #0b429d;
+}
+
 .top_head_left h4 {
     color: #fff;
     font-size: 18px;
