--- a/public/assets/admin/css/tailwind2.css
+++ b/public/assets/admin/css/tailwind2.css
@@ -32687,7 +32687,9 @@ td.gridjs-td:last-child {
     height: 100%;
 }
 
-
+.lead_activity{
+    width: 100%;
+}
 
 .lead_activity .card {
     font-family: Arial, sans-serif;
@@ -32763,7 +32765,7 @@ td.gridjs-td:last-child {
     font-size: 12px;
     padding: 2px 8px;
     border-radius: 12px;
-    color: white;
+    color: #000;
 }
 
 .lead_activity .status-done {
