--- a/resources/views/adminhtml/basic-form.html
+++ b/resources/views/adminhtml/basic-form.html
@@ -716,11 +716,11 @@
                     <div class="section-title mt-0">Text</div>
                     <div class="form-group">
                       <label>Readonly</label>
-                      <input type="text" class="form-control" readonly="">
+                      <input type="text" class="form-control">
                     </div>
                     <div class="form-group">
                       <label>Readonly Plain Text</label>
-                      <input type="text" class="form-control-plaintext" readonly="" value="Hello!">
+                      <input type="text" class="form-control-plaintext" value="Hello!">
                     </div>
                     <div class="section-title">Select</div>
                     <div class="form-group">
