--- a/public/assets/admin/css/tailwind2.css
+++ b/public/assets/admin/css/tailwind2.css
@@ -32386,7 +32386,7 @@ td.gridjs-td:last-child {
     background-color: #3b82f6;
 }
 
-.bg_top_hed_user{
+.bg_top_hed_user {
     /* background-color: #295aab; */
     background-color: #0b429d;
 }
@@ -32397,22 +32397,20 @@ td.gridjs-td:last-child {
     font-weight: 500;
 }
 
-.d-none{
+.d-none {
     display: none;
 }
 
-.wht_sp_nwrp{
+.wht_sp_nwrp {
     white-space: nowrap;
 }
 
-
-.cstrm_add{
+.cstrm_add {
     display: flex;
     align-items: center;
     margin-top: 30px;
     gap: 10px;
 }
-
 
 /* modal style  */
 
@@ -32642,7 +32640,6 @@ td.gridjs-td:last-child {
 
 /* modal style end  */
 
-
 .card .card-header {
     border-bottom-color: #f9f9f9;
     line-height: 30px;
@@ -32675,19 +32672,19 @@ td.gridjs-td:last-child {
     margin-bottom: 25px;
 }
 
-.srchButton{
+.srchButton {
     margin-top: 30px;
 }
 
-.w_100{
+.w_100 {
     width: 100%;
 }
 
-.hight_100{
+.hight_100 {
     height: 100%;
 }
 
-.lead_activity{
+.lead_activity {
     width: 100%;
 }
 
@@ -32768,7 +32765,7 @@ td.gridjs-td:last-child {
     color: #000;
 }
 
-li{
+li {
     list-style: none;
 }
 
@@ -32792,35 +32789,35 @@ li{
     padding-left: 0 !important;
 }
 
-.pr-0{
+.pr-0 {
     padding-right: 0 !important;
 }
 
-.pt-0{
+.pt-0 {
     padding-top: 0 !important;
 }
 
-.pb-0{
+.pb-0 {
     padding-bottom: 0 !important;
 }
 
-.ml-0{
+.ml-0 {
     margin-left: 0;
 }
 
-.mr-0{
+.mr-0 {
     margin-right: 0;
 }
 
-.mt-0{
+.mt-0 {
     margin-top: 0;
 }
 
-.mb-0{
+.mb-0 {
     margin-bottom: 0;
 }
 
-.lead_prsnl_dtls{
+.lead_prsnl_dtls {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 20px 30px;
 }
@@ -32837,7 +32834,6 @@ li{
     margin-bottom: 20px;
     position: relative;
 }
-
 
 .lead_dtls .timeline-icon {
     /* position: absolute; */
@@ -32895,7 +32891,9 @@ li{
     border: 1px solid rgb(227 233 241);
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow {
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__arrow {
     height: 26px;
     position: absolute;
     top: 10px;
@@ -32903,7 +32901,9 @@ li{
     width: 20px;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__rendered {
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__rendered {
     color: #444;
     line-height: 40px;
 }
@@ -32929,10 +32929,43 @@ li{
     padding-left: 30px;
 }
 
-.mt_40{
+.mt_40 {
     margin-top: 40px;
 }
 
-.red{
+.red {
     color: red;
+}
+
+.pagination {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.previous,
+.next {
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+    /* padding-top: 0.25rem;
+    padding-bottom: 0.25rem; */
+    background-color: rgb(4 69 175);
+    display: inline-block;
+    border-radius: 0.375rem;
+    border-width: 1px;
+    border-color: transparent;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    font-size: 0.8125rem;
+    -webkit-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+    -webkit-transition-timing-function: linear;
+    transition-timing-function: linear;
+}
+
+.pagination .active{
+    border-bottom: 1px solid #0445af;
 }
