--- a/public/assets/admin/css/tailwind2.css
+++ b/public/assets/admin/css/tailwind2.css
@@ -32948,7 +32948,7 @@ li {
     color: rgb(255 255 255 / var(--tw-text-opacity));
     /* padding-top: 0.25rem;
     padding-bottom: 0.25rem; */
-    background-color: rgb(4 69 175);
+    background-color: rgb(71 85 105 / var(--tw-bg-opacity));
     display: inline-block;
     border-radius: 0.375rem;
     border-width: 1px;
@@ -32968,4 +32968,17 @@ li {
 
 .pagination .active{
     border-bottom: 1px solid #0445af;
+}
+
+
+.form-control{
+    margin-left: 0.5em;
+    display: inline-block;
+    width: auto;
+    --tw-border-opacity: 1;
+    border-color: rgb(226 232 240 / var(--tw-border-opacity));
+    border-radius: 0.375rem;
+    border-width: 1px;
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem;
 }
