--- a/public/assets/admin/css/tailwind2.css
+++ b/public/assets/admin/css/tailwind2.css
@@ -32982,3 +32982,12 @@ li {
     padding: 0.5rem 1rem;
     font-size: 0.875rem;
 }
+
+.h-100{
+    height: 100%;
+}
+
+.lead_report{
+    background-color: #fff;
+    padding: 20px;
+}
